--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -2,8 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="4dp"
-    android:padding="30dp"
+    app:cardCornerRadius="6dp"
     app:cardBackgroundColor="@color/white"
     android:elevation="5dp"
     android:layout_gravity="center"
@@ -24,7 +23,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="7dp"
+            android:padding="9dp"
             android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,6 +36,7 @@
                 android:layout_height="wrap_content"
                 android:text="Event Title"
                 android:textStyle="bold"
+                android:id="@+id/eventNameHolder"
                 android:textSize="20sp"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 />
@@ -45,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="20"
+                android:id="@+id/eventPriceHolder"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_gravity="right"
@@ -55,7 +56,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:id="@+id/eventTypeHolder"
             android:text="Event Type"/>
+
 
         </LinearLayout>
     </LinearLayout>
