--- a/app/src/main/res/layout/activity_orgo.xml
+++ b/app/src/main/res/layout/activity_orgo.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.teamnotfoundexception.impetus.activities.HomeActivity">
+    tools:context="com.teamnotfoundexception.impetus.activities.OrgoActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -14,8 +14,6 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/appbar_padding_top"
         android:theme="@style/AppTheme.AppBarOverlay">
-
-
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -38,19 +36,13 @@
                 android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mine" />
+                android:text="Home" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Starred" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/tabItem3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="All" />
+                android:text="Players" />
 
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
