--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -93,6 +93,26 @@
                 android:textColorHint="@color/white"
                 />
         </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColorHint="@color/white"
+            android:layout_marginBottom = "8dp" >
+            <EditText
+                android:id="@+id/dept"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/logEmail"
+                android:hint="Department"
+                android:inputType="text"
+                android:textColorHint="@color/white"
+                />
+        </android.support.design.widget.TextInputLayout>
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/signSignUp"
             android:layout_width="fill_parent"
@@ -104,8 +124,5 @@
             android:padding="12dp"
             android:text="Sign up"/>
         />
-
-
-
     </LinearLayout>
 </ScrollView>
