--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -2,9 +2,10 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="6dp"
+    app:cardCornerRadius="2dp"
     app:cardBackgroundColor="@color/white"
     android:elevation="5dp"
+    android:layout_margin="6dp"
     android:layout_gravity="center"
     android:layout_height="wrap_content">
 
@@ -32,30 +33,42 @@
             android:layout_weight="5">
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="4"
+                android:layout_weight="3"
                 android:layout_height="wrap_content"
                 android:text="Event Title"
                 android:textStyle="bold"
                 android:id="@+id/eventNameHolder"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 />
-            <TextView
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="20"
-                android:id="@+id/eventPriceHolder"
-                android:textSize="16sp"
-                android:textStyle="bold"
+                android:layout_weight="2"
                 android:layout_gravity="right"
-                android:textAlignment="viewEnd"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-                />
+                android:gravity="right"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="20"
+                    android:id="@+id/eventPriceHolder"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/rs"
+                    android:textSize="12sp"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                    />
+            </LinearLayout>
         </LinearLayout>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="10sp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:id="@+id/eventTypeHolder"
             android:text="Event Type"/>
