--- a/app/src/main/res/layout/fragment_orgo_home.xml
+++ b/app/src/main/res/layout/fragment_orgo_home.xml
@@ -9,15 +9,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="3dp"
+        android:layout_margin="7dp"
         app:cardBackgroundColor="@color/white"
         android:layout_gravity="top"
         android:padding="20dp"
-        app:cardCornerRadius="6dp"
+        app:cardElevation="3dp"
         >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
+            android:layout_margin="11dp"
             android:layout_height="wrap_content">
 
             <TextView
