--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -11,17 +11,16 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_height"
+        android:layout_height="250dp"
         android:fitsSystemWindows="true"
+
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/descriptionImageHolder"
-            android:src="@mipmap/ic_launcher"
-            android:scaleType="fitXY"
-            />
+            android:layout_height="wrap_content"
+            android:id="@+id/eventImageContainer"/>
+
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
@@ -30,8 +29,6 @@
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/toolbar">
-
-
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -54,11 +51,7 @@
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/desRegisterBtn"
-        />
+
 
 
 </android.support.design.widget.CoordinatorLayout>
