--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -5,10 +5,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.teamnotfoundexception.impetus.fragments.TimerFragment">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+
+        android:layout_height="match_parent">
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="3dp"
+        android:id="@+id/really"
         android:layout_margin="7dp"
         app:cardBackgroundColor="@color/white"
         android:layout_gravity="top"
@@ -26,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:text="EventName"
                 android:textAlignment="center"
-                android:id="@+id/fragOrgoHomeEventNameHolder"
+                android:id="@+id/foEventNameHolder"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
             <TextView
                 android:layout_width="match_parent"
@@ -35,6 +41,7 @@
                 android:layout_marginTop="10dp"
                 android:textStyle="bold"
                 android:textSize="30sp"
+                android:id="@+id/foClock"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:text="TIMER" />
             <View
@@ -54,13 +61,15 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
-                    android:text="Player Count"/>
+                    android:text="Team Count"/>
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:textAlignment="viewEnd"
-                    android:layout_gravity="right"
+                    android:gravity="end"
+                    android:id="@+id/teamCountContainer"
+                    android:layout_gravity="end"
                     android:layout_height="match_parent"
                     android:text="Some detail"/>
 
@@ -73,17 +82,18 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/teamCountHolder"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="match_parent"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                    android:text="20"/>
+                    android:layout_weight="1"
+                    android:text="20"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:textAlignment="viewEnd"
-                    android:layout_gravity="right"
+                    android:layout_gravity="end"
                     android:layout_height="match_parent"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                     android:text="some"/>
@@ -93,4 +103,121 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/really"
+
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_margin="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="2"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                style="@style/textStyle"
+                android:layout_height="wrap_content"
+                android:text="Event Type :"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="Dinkachika"
+                style="@style/textStyle"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"
+                android:gravity="end"
+                android:id="@+id/eventTypeContainer"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="2"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            style="@style/textStyle"
+            android:layout_height="wrap_content"
+            android:text="Event Location :"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Mane"
+            style="@style/textStyle"
+            android:textAlignment="viewEnd"
+            android:layout_gravity="end"
+            android:gravity="end"
+            android:id="@+id/eventLocationContainer"
+            />
+    </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="2"
+            android:layout_margin="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                style="@style/textStyle"
+                android:layout_height="wrap_content"
+                android:text="Team members :"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="2"
+                style="@style/textStyle"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"
+                android:gravity="end"
+                android:id="@+id/maxTeamMemberContainer"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="2"
+            android:layout_margin="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                style="@style/textStyle"
+                android:layout_height="wrap_content"
+                android:text="Ticket Cost :"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="20"
+                style="@style/textStyle"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"
+                android:gravity="end"
+                android:id="@+id/ticketCostContainer"
+                />
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+    </RelativeLayout>
 </FrameLayout>
