--- a/app/src/main/res/layout/activity_orgo.xml
+++ b/app/src/main/res/layout/activity_orgo.xml
@@ -53,6 +53,15 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_dialog_email"
+        android:id="@+id/fab"
+        android:layout_margin="30dp"
+        android:layout_gravity="bottom|end"
+        android:elevation="6dp"
+        app:pressedTranslationZ="12dp"
+        />
 
 </android.support.design.widget.CoordinatorLayout>
