--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,7 +69,7 @@
             android:text="Login"/>
         />
 
-        <android.support.v7.widget.AppCompatButton
+        <TextView
             android:id="@+id/logSignUp"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
