--- a/app/src/main/res/layout/fragment_starred.xml
+++ b/app/src/main/res/layout/fragment_starred.xml
@@ -1,3 +1,6 @@
+<RelativeLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,3 +13,29 @@
     app:layoutManager="LinearLayoutManager"
     tools:context="com.teamnotfoundexception.impetus.fragments.StarredFragment"
     tools:listitem="@layout/fragment_item" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:background="@color/colorPrimary"
+        android:layout_padding="30dp"
+        android:id="@+id/starHidden"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_whatshot_white_24dp"
+            android:id="@+id/logo"
+            android:layout_height="100dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_margin="30dp"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:textColor="@color/white"
+            android:layout_below="@id/logo"
+            android:text="Looks so empty, register for something mate!"/>
+    </RelativeLayout>
+</RelativeLayout>
