--- a/app/src/main/res/layout/fragment_item_list2.xml
+++ b/app/src/main/res/layout/fragment_item_list2.xml
@@ -2,6 +2,7 @@
 
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="6dp"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
 
@@ -20,7 +21,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:background="@color/colorPrimary"
-        android:layout_padding="30dp"
+
         android:visibility="gone"
         android:id="@+id/item_list2"
         android:layout_height="match_parent">
