--- a/app/src/main/res/layout/fragment_my_events.xml
+++ b/app/src/main/res/layout/fragment_my_events.xml
@@ -1,5 +1,6 @@
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="6dp"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -17,7 +18,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:background="@color/colorPrimary"
-        android:layout_padding="30dp"
         android:visibility="gone"
         android:id="@+id/myEventsHidden"
         android:layout_height="match_parent">
