--- a/app/src/main/res/layout/fragment_starred.xml
+++ b/app/src/main/res/layout/fragment_starred.xml
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:background="@color/colorPrimary"
         android:id="@+id/starHidden"
+        android:visibility="gone"
         android:layout_height="match_parent">
 
         <ImageView
