--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -10,6 +10,12 @@
         />
 
     <item
+        app:showAsAction="never"
+        android:id="@+id/logout"
+        android:title="Logout"
+        />
+
+    <item
         app:showAsAction="always"
         android:icon="@drawable/ic_whatshot_white_24dp"
         android:title="organizer"
