--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -3,17 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
+    android:padding="6dp"
     tools:context="com.teamnotfoundexception.impetus.fragments.RegisterFragment">
 
     <LinearLayout
-        android:id="@+id/temp"
+        android:id="@+id/notRegistered"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
         android:orientation="vertical"
         >
-
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
@@ -127,7 +127,6 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
-
             android:padding="12dp"
             android:text="Register"
             android:textColor="@color/white" />
@@ -143,25 +142,28 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:background="@color/colorPrimary"
-        android:visibility="gone"
+        android:visibility="visible"
+        android:id="@+id/registeredAlready"
         android:layout_height="match_parent">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
             android:src="@drawable/ic_whatshot_white_24dp"
             android:id="@+id/logo"
-            android:layout_height="100dp" />
+            android:layout_above="@id/msg"
+            android:layout_centerHorizontal="true"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:id="@+id/msg"
+            android:layout_centerInParent="true"
             android:layout_margin="30dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:textColor="@color/white"
-            android:layout_below="@id/logo"
-            android:text="Looks like you have already signed up!"/>
+            android:text="Looks like you have already registered!"/>
     </RelativeLayout>
 
 </FrameLayout>
