--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#e71b36</color>
     <color name="colorPrimaryDark">#cf0b22</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent">#f97f1c</color>
     <color name="white">#FFFFFF</color>
+
 </resources>
