--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,15 +8,26 @@
     android:background="@color/colorPrimary"
     tools:context="com.teamnotfoundexception.impetus.LogSign.LoginActivity">
 
+
     <LinearLayout
         android:id="@+id/temp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="56dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
         android:orientation="vertical"
         >
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_height="100dp"
+            android:src="@drawable/whatshot"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/boondi_logo"/>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -69,7 +80,7 @@
             android:layout_marginBottom="24dp"
             android:textColor="@color/white"
             android:padding="12dp"
-            android:text="Login"/>
+            android:text="LOGIN"/>
         />
 
 
@@ -84,7 +95,7 @@
                 android:layout_weight="1"
                 style="@style/BtnStyle"
                 android:id="@+id/logSignUp"
-                android:text="SignUp"
+                android:text="SIGNUP"
                 android:layout_height="wrap_content" />
 
             <Button
@@ -92,7 +103,7 @@
                 android:id="@+id/logOrgSignIn"
                 android:background="@color/white"
                 android:textColor="@color/colorPrimary"
-                android:text="Org Sign In"
+                android:text="Organizers In"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
 
