--- a/app/src/main/res/layout/activity_organizer_login.xml
+++ b/app/src/main/res/layout/activity_organizer_login.xml
@@ -18,6 +18,16 @@
         android:orientation="vertical"
         >
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_height="100dp"
+            android:src="@drawable/whatshot"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/boondi_logo"/>
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
