--- a/app/src/main/res/layout/activity_orgo.xml
+++ b/app/src/main/res/layout/activity_orgo.xml
@@ -59,6 +59,7 @@
         android:src="@android:drawable/ic_dialog_email"
         android:id="@+id/fab"
         android:layout_margin="30dp"
+        android:background="@android:color/transparent"
         android:layout_gravity="bottom|end"
         android:elevation="6dp"
         app:pressedTranslationZ="12dp"
