--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -12,11 +12,16 @@
         android:id="@+id/temp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="56dp"
         android:paddingLeft="24dp"
+        android:layout_marginTop="5dp"
         android:paddingRight="24dp"
         android:orientation="vertical"
         >
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_height="100dp"
+            android:src="@drawable/whatshot"/>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
