--- a/app/src/main/res/layout/fragment_orgo_home.xml
+++ b/app/src/main/res/layout/fragment_orgo_home.xml
@@ -24,7 +24,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="EventName"
+                android:text="Event Name"
                 android:textAlignment="center"
                 android:id="@+id/fragOrgoHomeEventNameHolder"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
@@ -36,7 +36,7 @@
                 android:textStyle="bold"
                 android:textSize="30sp"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:text="TIMER" />
+                android:text="Loading" />
             <View
                 android:layout_width="match_parent"
                 android:layout_marginTop="10dp"
@@ -54,7 +54,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
-                    android:text="Player Count"/>
+                    android:text="Ticket Cost"/>
 
                 <TextView
                     android:layout_width="0dp"
@@ -62,7 +62,7 @@
                     android:textAlignment="viewEnd"
                     android:layout_gravity="right"
                     android:layout_height="match_parent"
-                    android:text="Some detail"/>
+                    android:text=""/>
 
             </LinearLayout>
 
@@ -77,7 +77,7 @@
                     android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                    android:text="20"/>
+                    android:text="30"/>
 
                 <TextView
                     android:layout_width="0dp"
@@ -86,7 +86,7 @@
                     android:layout_gravity="right"
                     android:layout_height="match_parent"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                    android:text="some"/>
+                    android:text=""/>
 
             </LinearLayout>
 
