--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -148,8 +148,8 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:src="@drawable/ic_whatshot_white_24dp"
-            android:id="@+id/logo"
+            android:src="@drawable/whatshot"
+            android:id="@+id/loog"
             android:layout_above="@id/msg"
             android:layout_centerHorizontal="true"
             android:layout_height="wrap_content" />
