--- a/app/src/main/res/layout/fragment_my_events.xml
+++ b/app/src/main/res/layout/fragment_my_events.xml
@@ -21,7 +21,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_centerInParent="true"
-            android:src="@drawable/ic_whatshot_white_24dp"
+            android:src="@drawable/ic_launcher"
             android:id="@+id/logo"
 
             android:layout_height="100dp" />
