--- a/app/src/main/res/menu/menuone.xml
+++ b/app/src/main/res/menu/menuone.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:showAsAction="always|collapseActionView"
+        app:showAsAction="always"
         android:id="@+id/searcher"
         app:actionViewClass="android.support.v7.widget.SearchView"
         android:title="Search"
